# pari_2018

./: CMakeLists.txt  README.md
doc/: Doxyfile  mainpage.dox
server/: genproto2.sh  prototypes.h  server.c  server.h
shm/: prototypes.h  shared_memory.c  shm.h
src/: callbacks_edit_file.c  callbacks_edit_scrn.c  callbacks_main_menu.c  callbacks_play_scrn.c  callbacks_results_scrn.c  callbacks_warnings.c  destroy_signals.c  interface_functions.c  interface_main.c  interface_properties.c  main.c  prototypes.h  quiz.h
src/interface/: interface.glade~
src/interface/glade/: interface.glade~
